intTests/test_llvm_errors/err001.log.good
 Loading file "err001.saw"
 Verifying foo...
 Simulating foo...
 Checking proof obligations foo...
 Subgoal failed: foo err001.saw:13:1: error: in _SAW_LLVM_withMethodSpec
Literal equality postcondition
Expected term: 
let { x@1 = Prelude.Vec 32 Prelude.Bool
      x@2 = Cryptol.TCNum 32
    }
 in Cryptol.ecMul x@1 (Cryptol.PRingSeqBool x@2) x
      (Cryptol.ecNumber (Cryptol.TCNum 3) x@1
         (Cryptol.PLiteralSeqBool x@2))
Actual term:
Prelude.bvMul 32 (Prelude.bvNat 32 2) x

 SolverStats {solverStatsSolvers = fromList ["SBV->Z3"], solverStatsGoalSize = N}
 ----------Counterexample----------
   x: NNN
 ----------------------------------
 Stack trace:
   (builtin) in z3
   err001.saw:13:38-13:40 in (callback)
   (builtin) in llvm_verify
   err001.saw:13:1-13:40 (at top level)
Proof failed.

FAILED
