intTests/test_llvm_errors/err001.saw
// Produce whatever messages we generate when the return value doesn't
// match.

let foo_spec = do {
    x <- llvm_fresh_var "x" (llvm_int 32);
    llvm_assert {{ x < 5000 }};
    llvm_execute_func [llvm_term x];
    // Intentionally wrong (should be 2, not 3)
    llvm_return (llvm_term {{ x * 3 }});
};

m <- llvm_load_module "foo.bc";
llvm_verify m "foo" [] true foo_spec z3;
